#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([nsp], [2.0], [wj_hust08@163.com])
AM_INIT_AUTOMAKE([foreign])

AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile src/Makefile src/Utils/Makefile src/DG/Makefile src/Cluster/Makefile src/Pdb/Makefile src/MC/Makefile src/Score_/Makefile src/Nuc2D/Makefile src/Nuc3D/Makefile src/nsp/Makefile])

AC_OUTPUT
