#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([nsp], [2.0], [wj_hust08@163.com])
AM_INIT_AUTOMAKE([foreign])

AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile src/Makefile src/util/Makefile src/dg/Makefile src/pdb/Makefile src/mc/Makefile src/scoring/Makefile src/nuc2d/Makefile src/nuc3d/Makefile src/nsp/Makefile])

AC_OUTPUT
