include_directories(../include)
include_directories(../include/boost_1_58_0)
add_executable (nsp nsp.cpp)
add_executable (anal-mol AnalMol.cpp)
add_executable (build-junction BuildJunction.cpp)
add_executable (helix-parser HelixParser.cpp)
install(TARGETS nsp DESTINATION bin)
install(TARGETS anal-mol DESTINATION bin)
install(TARGETS build-junction DESTINATION bin)
install(TARGETS helix-parser DESTINATION bin)
