noinst_LIBRARIES = libPdb.a
libPdb_a_SOURCES = Atom.cpp Atom.h Chain.cpp Chain.h connect.cpp D5P.h DNA.cpp DNA.h Frag.cpp Frag.h Model.cpp Model.h Nuc.h P2B.cpp P2B.h Pdb.cpp Pdb.h R2D.cpp R2D.h R5P.h R6P.h Residue.cpp Residue.h RMSD.cpp RMSD.h RNA.cpp RNA.h SortAtoms.cpp SortAtoms.h Convert.cpp Convert.h Manipulate.cpp Manipulate.h
