noinst_LIBRARIES=libnuc3d.a
libnuc3d_a_SOURCES= Assemble.cpp Assemble.h ass_templates.cpp Connect.cpp Connect.h find_templates.cpp LoopModelling2.cpp LoopModelling2.h Transform.cpp Transform.h AddPhos.cpp AddPhos.h BuildNuc.h BuildNuc.cpp BuildJunction.cpp BuildJunction.h Split.cpp Split.h BuildHelix.h BuildHelix.cpp LM.h LM.cpp LM2.h LM2.cpp BuildTriplex.h BuildTriplex.cpp JobInf.h JobInf.cpp
