noinst_LIBRARIES=libnuc3d.a
libnuc3d_a_SOURCES= Assemble.h AssembleTemplates.h Connect.h FindTemplates.h LoopModelling2.cpp LoopModelling2.h Transform.cpp Transform.h AddPhos.h BuildNuc.h BuildNuc.cpp BuildJunction.cpp BuildJunction.h Split.h BuildHelix.h BuildHelix.cpp LM.h LM.cpp LM2.h LM2.cpp BuildTriplex.h BuildTriplex.cpp JobInf.h
