noinst_LIBRARIES = libpdb.a
libpdb_a_SOURCES = Atom.h Chain.h connect.cpp D5P.h DNA.cpp DNA.h Frag.h Model.cpp Model.h Nuc.h P2B.cpp P2B.h Pdb.cpp Pdb.h R2D.cpp R2D.h R5P.h R6P.h Residue.cpp Residue.h RMSD.cpp RMSD.h RNA.cpp RNA.h Format.cpp Format.h Convert.cpp Convert.h Manipulate.cpp Manipulate.h Cif.cpp Cif.h PdbFile.cpp PdbFile.h MolFile.h util.h
